@@ -108,8 +108,7 @@ public class SerialGeneratorFactory extends GeneratorFactory {
 	@Override
 	public <T extends Number> NonNullGenerator<T> createNumberGenerator(
             Class<T> numberType, T min, Boolean minInclusive, T max, Boolean maxInclusive, 
-            Integer totalDigits, Integer fractionDigits, T granularity, Distribution distribution, Uniqueness uniqueness) {
-        // TODO v0.7 define difference between granularity and fractionDigits and implement it accordingly
+            T granularity, Distribution distribution, Uniqueness uniqueness) {
         Assert.notNull(numberType, "numberType");
         if (distribution == null)
         	distribution = SequenceManager.STEP_SEQUENCE;
@@ -120,7 +119,7 @@ public class SerialGeneratorFactory extends GeneratorFactory {
         if (granularity == null)
         	granularity = defaultsProvider.defaultGranularity(numberType);
     	return super.createNumberGenerator(numberType, min, minInclusive, max, maxInclusive, 
-    			totalDigits, fractionDigits, granularity, distribution, uniqueness);
+    			granularity, distribution, uniqueness);
     }
     
 	@Override
